<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color_white_smoke">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.yongf.rorderwaiter.widget.TitleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tl_titleText="我的帐号"
            app:tl_leftMode="none"
            app:tl_rightMode="none" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_size130"
            android:background="@color/app_color_white" />

        <com.yongf.rorderwaiter.widget.DisplayItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_size10"
            app:div_leftIcon="@drawable/icon_email"
            app:div_leftMode="text_icon"
            app:div_leftText="@string/my_message"
            app:div_rightMode="icon" />

        <com.yongf.rorderwaiter.widget.DisplayItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_size10"
            app:div_leftIcon="@drawable/setting"
            app:div_leftMode="text_icon"
            app:div_leftText="@string/setting"
            app:div_rightMode="icon" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_size0.5"
            android:background="@color/app_color_divider" />

        <com.yongf.rorderwaiter.widget.DisplayItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:div_leftIcon="@drawable/scanning"
            app:div_leftMode="text_icon"
            app:div_leftText="@string/scan"
            app:div_rightMode="icon" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_size0.5"
            android:background="@color/app_color_divider" />

        <com.yongf.rorderwaiter.widget.DisplayItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:div_leftIcon="@drawable/skin"
            app:div_leftMode="text_icon"
            app:div_leftText="@string/skin_theme"
            app:div_rightMode="text_icon"
            app:div_rightText="@string/big_fish" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_size0.5"
            android:background="@color/app_color_divider" />

        <com.yongf.rorderwaiter.widget.DisplayItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:div_leftIcon="@drawable/lights"
            app:div_leftMode="text_icon"
            app:div_leftText="@string/night_mode"
            app:div_rightMode="switch_button" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_size0.5"
            android:background="@color/app_color_divider" />

        <com.yongf.rorderwaiter.widget.DisplayItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:div_leftIcon="@drawable/alarm_clock"
            app:div_leftMode="text_icon"
            app:div_leftText="@string/alarm_clock"
            app:div_rightMode="icon" />

        <com.yongf.rorderwaiter.widget.DisplayItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_size10"
            app:div_leftIcon="@drawable/share"
            app:div_leftMode="text_icon"
            app:div_leftText="@string/share_app"
            app:div_rightMode="icon" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_size0.5"
            android:background="@color/app_color_divider" />

        <com.yongf.rorderwaiter.widget.DisplayItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:div_leftIcon="@drawable/information"
            app:div_leftMode="text_icon"
            app:div_leftText="@string/about"
            app:div_rightMode="icon" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_size10"
            android:background="@color/app_color_white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="@dimen/app_size10"
                android:layout_marginTop="@dimen/app_size10"
                android:text="@string/log_out"
                android:textColor="@color/app_color_bright_red"
                android:textSize="@dimen/app_txt_size20" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_size20"
            android:background="@color/app_color_white_smoke" />
    </LinearLayout>
</ScrollView>
