<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.yongf.rorder.widget.TitleLayout
        android:id="@+id/tl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tl_rightMode="none"
        app:tl_titleText="登录" />

    <ImageView
        android:layout_width="@dimen/app_size90"
        android:layout_height="@dimen/app_size90"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/app_size30"
        android:src="@drawable/playstore_icon" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/app_size16"
        android:layout_marginRight="@dimen/app_size16"
        android:layout_marginTop="@dimen/app_size30"
        android:hint="手机/邮箱/帐号"
        app:met_iconLeft="@drawable/account_login" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/app_size16"
        android:layout_marginRight="@dimen/app_size16"
        android:hint="请输入密码"
        android:inputType="textPassword"
        app:met_iconLeft="@drawable/password_login" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_size50"
        android:layout_marginLeft="@dimen/app_size16"
        android:layout_marginRight="@dimen/app_size16"
        android:layout_marginTop="@dimen/app_size15"
        android:background="@color/app_color_login_blue"
        android:text="@string/login"
        android:textColor="@color/app_color_white"
        android:textSize="@dimen/app_txt_size18" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/app_size16"
        android:layout_marginRight="@dimen/app_size16"
        android:layout_marginTop="@dimen/app_size15">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/register_account"
            android:textColor="@color/app_color_login_gray"
            android:textSize="@dimen/app_size15" />

        <TextView
            android:id="@+id/tv_find_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/forget_password"
            android:textColor="@color/app_color_login_gray"
            android:textSize="@dimen/app_size15" />
    </RelativeLayout>
</LinearLayout>
